fix: change img scaling for better FOV and adjust margin/padding

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Booki</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="node_modules/normalize.css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +36,7 @@
                 <i class="fas fa-map-marker-alt background-grey"></i>
                 <input type="search" placeholder="Marseille, France" class="search-champ"/>
                 <input type="button" value="Rechercher" class="search-btn"/>
-                <input type="button" value="" class="hidden" /><i class="fas fa-search hidden search-btn--small"></i>
+                <input type="button" value=" " class="hidden" /><i class="fas fa-search hidden search-btn--small"></i>
             </form>
             <div class="filter">
                 <h3 class="filter-text">Filtres</h3>
@@ -266,7 +266,7 @@
         <section id="act" class="act">
             <h1>Activités à Marseille</h1>
             <div class="act-box">
-                <a href="#" class="card card-grande">
+                <a href="#" class="card act-card--big">
                     <article>
                         <div class="card-img">
                             <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Photo">
@@ -276,7 +276,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="#" class="card card2">
+                <a href="#" class="card act-card--2">
                     <article>
                         <div class="card-img">
                             <img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Photo">
@@ -286,7 +286,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="#" class="card card3">
+                <a href="#" class="card act-card--3">
                     <article>
                         <div class="card-img">
                             <img src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Photo" >
@@ -296,7 +296,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="#" class="card card-grande">
+                <a href="#" class="card act-card--big">
                     <article>
                         <div class="card-img">
                             <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Photo">
@@ -306,7 +306,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="#" class="card card5">
+                <a href="#" class="card act-card--5">
                     <article>
                         <div class="card-img">
                             <img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Photo">
@@ -316,7 +316,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="#" class="card card6">
+                <a href="#" class="card act-card--6">
                     <article>
                         <div class="card-img">
                             <img src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Photo">
