--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Booki</title>
     <meta charset="utf-8">
+    <meta name="description" content="OpenClassrooms Web Development Project 2">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="node_modules/normalize.css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -87,7 +88,7 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img src="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Photo">
+                                <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Photo">
                             </div>
                             
                             <div class="card-text">
@@ -106,7 +107,7 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img src="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo">
+                                <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Hôtel du port</h2>
@@ -124,7 +125,7 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img src="images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo">
+                                <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Hôtel Les mouettes</h2>
@@ -142,7 +143,7 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img src="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo">
+                                <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Hôtel de la mer</h2>
@@ -160,7 +161,7 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img src="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo">
+                                <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Auberge Le Panier</h2>
@@ -178,7 +179,7 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img src="images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Photo">
+                                <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Hôtel chez Amina</h2>
@@ -206,7 +207,7 @@
                     <a href="#" class="card">
                         <article class="flex-row">
                             <div class="card-img">
-                                <img src="images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo">
+                                <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Hôtel Le Soleil du matin</h2>
@@ -224,7 +225,7 @@
                     <a href="#" class="card">
                         <article class="flex-row">
                             <div class="card-img">
-                                <img src="images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo">
+                                <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Au coeur de l'eau<br />
@@ -244,7 +245,7 @@
                     <a href="#" class="card">
                         <article class="flex-row">
                             <div class="card-img">
-                                <img src="images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo">
+                                <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Hôtel Tout bleu et Blanc</h2>
@@ -279,7 +280,7 @@
                 <a href="#" class="card act-card--2">
                     <article>
                         <div class="card-img">
-                            <img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Photo">
+                            <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Photo">
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Fort de Pomègues</h2>
@@ -289,7 +290,7 @@
                 <a href="#" class="card act-card--3">
                     <article>
                         <div class="card-img">
-                            <img src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Photo" >
+                            <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Photo" >
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Îles du Frioul</h2>
@@ -309,7 +310,7 @@
                 <a href="#" class="card act-card--5">
                     <article>
                         <div class="card-img">
-                            <img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Photo">
+                            <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Photo">
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Notre-Dame-de-la-Garde</h2>
@@ -319,7 +320,7 @@
                 <a href="#" class="card act-card--6">
                     <article>
                         <div class="card-img">
-                            <img src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Photo">
+                            <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Photo">
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Parc Longchamp</h2>
