perf: add srcset to improve performance

--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Photo">
+                                <img srcset="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 1599w,
+                                             images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg 750w"
+                                     sizes="(max-width: 768px) 800px, 400px"
+                                     src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Photo">
                             </div>
                             
                             <div class="card-text">
@@ -108,7 +111,10 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo">
+                                <img srcset="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 1368w,
+                                             images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg 684w"
+                                     sizes="(max-width: 768px) 800px, 400px"
+                                     src="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Hôtel du port</h2>
@@ -126,7 +132,10 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo">
+                                <img srcset="images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 1500w,
+                                             images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg 750w"
+                                     sizes="(max-width: 768px) 800px, 400px"
+                                     src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Hôtel Les mouettes</h2>
@@ -144,7 +153,10 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo">
+                                <img srcset="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 1000w,
+                                             images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg 500w"
+                                     sizes="(max-width: 768px) 800px, 400px"
+                                     src="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Hôtel de la mer</h2>
@@ -162,7 +174,10 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo">
+                                <img srcset="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 1303w,
+                                             images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 652w"
+                                     sizes="(max-width: 768px) 800px, 400px"
+                                     src="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Auberge Le Panier</h2>
@@ -180,7 +195,10 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Photo">
+                                <img srcset="images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 972w,
+                                             images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 486w"
+                                     sizes="(max-width: 768px) 800px, 400px"
+                                     src="images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Hôtel chez Amina</h2>
@@ -271,7 +289,10 @@
                 <a href="#" class="card act-card--big">
                     <article>
                         <div class="card-img">
-                            <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Photo">
+                            <img srcset="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 1404w,
+                                         images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 702w"
+                                 sizes="(max-width: 768px) 800px, 400px"
+                                 src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Photo">
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Vieux Port</h2>
@@ -281,7 +302,10 @@
                 <a href="#" class="card act-card--2">
                     <article>
                         <div class="card-img">
-                            <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Photo">
+                            <img srcset="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg 771w,
+                                         images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg 356w"
+                                 sizes="(max-width: 768px) 800px, 450px"
+                                 src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Photo">
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Fort de Pomègues</h2>
@@ -291,7 +315,10 @@
                 <a href="#" class="card act-card--3">
                     <article>
                         <div class="card-img">
-                            <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Photo" >
+                            <img srcset="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg 1296w,
+                                         images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg 648w"
+                                 sizes="(max-width: 768px) 800px, 400px"
+                                 src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Photo" >
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Îles du Frioul</h2>
@@ -301,7 +328,10 @@
                 <a href="#" class="card act-card--big">
                     <article>
                         <div class="card-img">
-                            <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Photo">
+                            <img srcset="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 1212w,
+                                         images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 606w"
+                                 sizes="(max-width: 768px) 800px, 400px"
+                                 src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Photo">
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Parc National des Calanques</h2>
@@ -311,7 +341,10 @@
                 <a href="#" class="card act-card--5">
                     <article>
                         <div class="card-img">
-                            <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Photo">
+                            <img srcset="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg 1178w,
+                                         images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg 589w"
+                                 sizes="(max-width: 768px) 800px, 400px"
+                                 src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Photo">
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Notre-Dame-de-la-Garde</h2>
@@ -321,7 +354,10 @@
                 <a href="#" class="card act-card--6">
                     <article>
                         <div class="card-img">
-                            <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Photo">
+                            <img srcset="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg 1008w,
+                                        images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg 504w"
+                                 sizes="(max-width: 768px) 800px, 400px" 
+                                 src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Photo">
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Parc Longchamp</h2>
