--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <img id="logo" src="images/logo/Booki.png" alt="Logo" />
         <nav>
-            <ul class="flex-row">
+            <ul>
                 <li>
                     <a href="#lodging">Hébergements</a>
                 </li>
@@ -85,14 +85,14 @@
         <div class="center">
             <section id="lodging" class="lodging background-grey">
                 <h1>Hébergements à Marseille</h1>
-                <div>
+                <div class="lodging-box">
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img srcset="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 1599w,
+                                <img class="hor-img" srcset="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 1599w,
                                              images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg 750w"
-                                     sizes="(max-width: 768px) 800px, 400px"
-                                     src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Photo">
+                                             sizes="(max-width: 500px) 500px, (max-width: 768px) 768px, (max-width: 992px) 500px, 500px"
+                                             src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Photo">
                             </div>
                             
                             <div class="card-text">
@@ -111,10 +111,10 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img srcset="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 1368w,
+                                <img class="hor-img" srcset="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 1368w,
                                              images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg 684w"
-                                     sizes="(max-width: 768px) 800px, 400px"
-                                     src="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo">
+                                             sizes="(max-width: 500px) 500px, (max-width: 768px) 768px, (max-width: 992px) 500px, 500px"
+                                             src="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Hôtel du port</h2>
@@ -132,10 +132,10 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img srcset="images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 1500w,
+                                <img class="hor-img" srcset="images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 1500w,
                                              images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg 750w"
-                                     sizes="(max-width: 768px) 800px, 400px"
-                                     src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo">
+                                             sizes="(max-width: 500px) 500px, (max-width: 768px) 768px, (max-width: 992px) 500px, 500px"
+                                             src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Hôtel Les mouettes</h2>
@@ -153,10 +153,10 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img srcset="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 1000w,
+                                <img class="hor-img" srcset="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 1000w,
                                              images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg 500w"
-                                     sizes="(max-width: 768px) 800px, 400px"
-                                     src="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo">
+                                             sizes="(max-width: 500px) 500px, (max-width: 768px) 768px, (max-width: 992px) 500px, 500px"
+                                             src="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Hôtel de la mer</h2>
@@ -174,10 +174,10 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img srcset="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 1303w,
+                                <img class="hor-img" srcset="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 1303w,
                                              images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 652w"
-                                     sizes="(max-width: 768px) 800px, 400px"
-                                     src="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo">
+                                             sizes="(max-width: 500px) 500px, (max-width: 768px) 768px, (max-width: 992px) 500px, 500px"
+                                             src="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Auberge Le Panier</h2>
@@ -195,9 +195,8 @@
                     <a href="#" class="card">
                         <article>
                             <div class="card-img">
-                                <img srcset="images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 972w,
-                                             images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 486w"
-                                     sizes="(max-width: 768px) 800px, 400px"
+                                <img class="ver-img" srcset="images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 972w, images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 486w"
+                                     sizes="(max-width: 500px) 500px, (max-width: 768px) 768px, (max-width: 992px) 500px, 500px"
                                      src="images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
@@ -214,7 +213,9 @@
                         </article>
                     </a>
                 </div>
-                <h2>Afficher plus</h2>
+                <a href="#">
+                    <h2>Afficher plus</h2>
+                </a>
             </section>
 
             <section id="pop" class="pop background-grey">
@@ -224,9 +225,9 @@
                 </div>
                 <div>
                     <a href="#" class="card">
-                        <article class="flex-row">
+                        <article>
                             <div class="card-img">
-                                <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo">
+                                <img class="hor-img" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Hôtel Le Soleil du matin</h2>
@@ -242,9 +243,9 @@
                         </article>
                     </a>
                     <a href="#" class="card">
-                        <article class="flex-row">
+                        <article>
                             <div class="card-img">
-                                <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo">
+                                <img class="hor-img" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Au coeur de l'eau<br />
@@ -262,9 +263,9 @@
                         </article>
                     </a>
                     <a href="#" class="card">
-                        <article class="flex-row">
+                        <article>
                             <div class="card-img">
-                                <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo">
+                                <img class="ver-img" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo">
                             </div>
                             <div class="card-text">
                                 <h2 class="card-title">Hôtel Tout bleu et Blanc</h2>
@@ -289,10 +290,10 @@
                 <a href="#" class="card act-card--big">
                     <article>
                         <div class="card-img">
-                            <img srcset="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 1404w,
+                            <img class="hor-img" srcset="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 1404w,
                                          images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 702w"
-                                 sizes="(max-width: 768px) 800px, 400px"
-                                 src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Photo">
+                                         sizes="(max-width: 500px) 500px, (max-width: 768px) 768px, (max-width: 992px) 500px, 500px"
+                                         src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Photo">
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Vieux Port</h2>
@@ -302,10 +303,10 @@
                 <a href="#" class="card act-card--2">
                     <article>
                         <div class="card-img">
-                            <img srcset="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg 771w,
+                            <img class="ver-img" srcset="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg 771w,
                                          images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg 356w"
-                                 sizes="(max-width: 768px) 800px, 450px"
-                                 src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Photo">
+                                         sizes="(max-width: 500px) 500px, (max-width: 768px) 768px, (max-width: 992px) 500px, 500px"
+                                         src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Photo">
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Fort de Pomègues</h2>
@@ -315,10 +316,10 @@
                 <a href="#" class="card act-card--3">
                     <article>
                         <div class="card-img">
-                            <img srcset="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg 1296w,
+                            <img class="hor-img" srcset="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg 1296w,
                                          images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg 648w"
-                                 sizes="(max-width: 768px) 800px, 400px"
-                                 src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Photo" >
+                                         sizes="(max-width: 500px) 500px, (max-width: 768px) 768px, (max-width: 992px) 500px, 500px"
+                                         src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Photo" >
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Îles du Frioul</h2>
@@ -328,10 +329,10 @@
                 <a href="#" class="card act-card--big">
                     <article>
                         <div class="card-img">
-                            <img srcset="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 1212w,
+                            <img class="hor-img" srcset="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 1212w,
                                          images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 606w"
-                                 sizes="(max-width: 768px) 800px, 400px"
-                                 src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Photo">
+                                         sizes="(max-width: 500px) 500px, (max-width: 768px) 768px, (max-width: 992px) 500px, 500px"
+                                         src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Photo">
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Parc National des Calanques</h2>
@@ -341,10 +342,10 @@
                 <a href="#" class="card act-card--5">
                     <article>
                         <div class="card-img">
-                            <img srcset="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg 1178w,
+                            <img class="hor-img" srcset="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg 1178w,
                                          images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg 589w"
-                                 sizes="(max-width: 768px) 800px, 400px"
-                                 src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Photo">
+                                         sizes="(max-width: 500px) 500px, (max-width: 768px) 768px, (max-width: 992px) 500px, 500px"
+                                         src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Photo">
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Notre-Dame-de-la-Garde</h2>
@@ -354,10 +355,10 @@
                 <a href="#" class="card act-card--6">
                     <article>
                         <div class="card-img">
-                            <img srcset="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg 1008w,
+                            <img class="hor-img" srcset="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg 1008w,
                                         images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg 504w"
-                                 sizes="(max-width: 768px) 800px, 400px" 
-                                 src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Photo">
+                                        sizes="(max-width: 500px) 500px, (max-width: 768px) 768px, (max-width: 992px) 500px, 500px"
+                                        src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Photo">
                         </div>
                         <div class="card-text">
                             <h2 class="card-title">Parc Longchamp</h2>
