fix: change search-btn-text from <p> to <span> to pass html validator

--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
                     Trouvez votre hébergement pour des vacances de rêve
                 </h1>
                 <p>En plein centre ville ou en pleine nature</p>
-                <form>
+                <form id="search-form">
                     <i class="fas fa-map-marker-alt background-grey"></i>
                     <input
-                        id="search"
+                        id="search-input"
                         type="search"
                         placeholder="Marseille, France"
                         class="search-input"
                     />
                     <button type="submit" class="search-btn">
-                        <p class="search-btn-text">Rechercher</p>
+                        <span class="search-btn-text">Rechercher</span>
                         <i class="fas fa-search search-btn-icon"></i>
                     </button>
                 </form>
@@ -67,76 +67,29 @@
                     <ul>
                         <li class="filter-btn">
                             <span class="fa-stack fa-1x">
-                                <i
-                                    class="
-                                        fas
-                                        fa-circle fa-stack-1x
-                                        background-blue
-                                    "
-                                ></i>
-                                <i
-                                    class="
-                                        fas
-                                        fa-money-bill-wave
-                                        filter-icone
-                                        fa-stack-1x
-                                    "
-                                ></i>
+                                <i class="fas fa-circle fa-stack-1x background-blue"></i>
+                                <i class="fas fa-money-bill-wave filter-icone fa-stack-1x"></i>
                             </span>
                             <h3 class="filter-text">Économique</h3>
                         </li>
                         <li class="filter-btn">
                             <span class="fa-stack fa-1x">
-                                <i
-                                    class="
-                                        fas
-                                        fa-circle fa-stack-1x
-                                        background-blue
-                                    "
-                                ></i>
-                                <i
-                                    class="
-                                        fas
-                                        fa-child
-                                        filter-icone
-                                        fa-stack-1x
-                                    "
-                                ></i>
+                                <i class="fas fa-circle fa-stack-1x background-blue"></i>
+                                <i class="fas fa-child filter-icone fa-stack-1x"></i>
                             </span>
                             <h3 class="filter-text">Familial</h3>
                         </li>
                         <li class="filter-btn">
                             <span class="fa-stack fa-1x">
-                                <i
-                                    class="
-                                        fas
-                                        fa-circle fa-stack-1x
-                                        background-blue
-                                    "
-                                ></i>
-                                <i
-                                    class="
-                                        fas
-                                        fa-heart
-                                        filter-icone
-                                        fa-stack-1x
-                                    "
-                                ></i>
+                                <i class="fas fa-circle fa-stack-1x background-blue"></i>
+                                <i class="fas fa-heart filter-icone fa-stack-1x"></i>
                             </span>
                             <h3 class="filter-text">Romantique</h3>
                         </li>
                         <li class="filter-btn">
                             <span class="fa-stack fa-1x">
-                                <i
-                                    class="
-                                        fas
-                                        fa-circle fa-stack-1x
-                                        background-blue
-                                    "
-                                ></i>
-                                <i
-                                    class="fas fa-dog filter-icone fa-stack-1x"
-                                ></i>
+                                <i class="fas fa-circle fa-stack-1x background-blue"></i>
+                                <i class="fas fa-dog filter-icone fa-stack-1x"></i>
                             </span>
                             <h3 class="filter-text">Animaux autorisés</h3>
                         </li>
