--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <body>
         <header>
-            <img id="logo" src="images/logo/Booki.png" alt="Logo" />
+            <img id="logo" src="images/logo/Booki@3x.png" alt="Logo" />
             <nav>
                 <ul>
                     <li>
@@ -49,7 +49,7 @@
                     Trouvez votre hébergement pour des vacances de rêve
                 </h1>
                 <p>En plein centre ville ou en pleine nature</p>
-                <form id="search-form">
+                <form id="search-form" class="search-form">
                     <i class="fas fa-map-marker-alt background-grey"></i>
                     <input
                         id="search-input"
@@ -68,28 +68,28 @@
                         <li class="filter-btn">
                             <span class="fa-stack fa-1x">
                                 <i class="fas fa-circle fa-stack-1x background-blue"></i>
-                                <i class="fas fa-money-bill-wave filter-icone fa-stack-1x"></i>
+                                <i class="fas fa-money-bill-wave filter-icon fa-stack-1x"></i>
                             </span>
                             <h3 class="filter-text">Économique</h3>
                         </li>
                         <li class="filter-btn">
                             <span class="fa-stack fa-1x">
                                 <i class="fas fa-circle fa-stack-1x background-blue"></i>
-                                <i class="fas fa-child filter-icone fa-stack-1x"></i>
+                                <i class="fas fa-child filter-icon fa-stack-1x"></i>
                             </span>
                             <h3 class="filter-text">Familial</h3>
                         </li>
                         <li class="filter-btn">
                             <span class="fa-stack fa-1x">
                                 <i class="fas fa-circle fa-stack-1x background-blue"></i>
-                                <i class="fas fa-heart filter-icone fa-stack-1x"></i>
+                                <i class="fas fa-heart filter-icon fa-stack-1x"></i>
                             </span>
                             <h3 class="filter-text">Romantique</h3>
                         </li>
                         <li class="filter-btn">
                             <span class="fa-stack fa-1x">
                                 <i class="fas fa-circle fa-stack-1x background-blue"></i>
-                                <i class="fas fa-dog filter-icone fa-stack-1x"></i>
+                                <i class="fas fa-dog filter-icon fa-stack-1x"></i>
                             </span>
                             <h3 class="filter-text">Animaux autorisés</h3>
                         </li>
@@ -114,7 +114,6 @@
                             <article>
                                 <div class="card-img">
                                     <img
-                                        class="hor-img"
                                         srcset="
                                             images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 1599w,
                                             images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg   750w
@@ -126,7 +125,7 @@
                                 </div>
                                 <div class="card-text">
                                     <h2 class="card-title">
-                                        Auberge de la Cannebière
+                                        Auberge la Cannebière
                                     </h2>
                                     <p>Nuit à partir de 25€</p>
                                     <div class="card-rating">
@@ -143,7 +142,6 @@
                             <article>
                                 <div class="card-img">
                                     <img
-                                        class="hor-img"
                                         srcset="
                                             images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 1368w,
                                             images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg   684w
@@ -170,7 +168,6 @@
                             <article>
                                 <div class="card-img">
                                     <img
-                                        class="hor-img"
                                         srcset="
                                             images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 1500w,
                                             images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg   750w
@@ -199,7 +196,6 @@
                             <article>
                                 <div class="card-img">
                                     <img
-                                        class="hor-img"
                                         srcset="
                                             images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 1000w,
                                             images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg   500w
@@ -226,7 +222,6 @@
                             <article>
                                 <div class="card-img">
                                     <img
-                                        class="hor-img"
                                         srcset="
                                             images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 1303w,
                                             images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg   652w
@@ -255,7 +250,6 @@
                             <article>
                                 <div class="card-img">
                                     <img
-                                        class="ver-img"
                                         srcset="
                                             images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 972w,
                                             images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg  486w
@@ -279,9 +273,7 @@
                             </article>
                         </a>
                     </div>
-                    <a href="#">
-                        <h2>Afficher plus</h2>
-                    </a>
+                    <a href="#" class="show-more">Afficher plus</a>
                 </section>
 
                 <section id="pop" class="pop background-grey">
@@ -289,12 +281,11 @@
                         <h1>Les plus populaires</h1>
                         <i class="fas fa-chart-line"></i>
                     </div>
-                    <div>
+                    <div class="pop-box">
                         <a href="#" class="card">
                             <article>
                                 <div class="card-img">
                                     <img
-                                        class="hor-img"
                                         src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                                         alt="Photo"
                                     />
@@ -318,7 +309,6 @@
                             <article>
                                 <div class="card-img">
                                     <img
-                                        class="hor-img"
                                         src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
                                         alt="Photo"
                                     />
@@ -343,7 +333,6 @@
                             <article>
                                 <div class="card-img">
                                     <img
-                                        class="ver-img"
                                         src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                                         alt="Photo"
                                     />
@@ -374,7 +363,6 @@
                         <article>
                             <div class="card-img">
                                 <img
-                                    class="hor-img"
                                     srcset="
                                         images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 1404w,
                                         images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg   702w
@@ -393,7 +381,6 @@
                         <article>
                             <div class="card-img">
                                 <img
-                                    class="ver-img"
                                     srcset="
                                         images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg 771w,
                                         images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg  356w
@@ -412,7 +399,6 @@
                         <article>
                             <div class="card-img">
                                 <img
-                                    class="hor-img"
                                     srcset="
                                         images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg 1296w,
                                         images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg   648w
@@ -431,7 +417,6 @@
                         <article>
                             <div class="card-img">
                                 <img
-                                    class="hor-img"
                                     srcset="
                                         images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 1212w,
                                         images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg   606w
@@ -452,7 +437,6 @@
                         <article>
                             <div class="card-img">
                                 <img
-                                    class="hor-img"
                                     srcset="
                                         images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg 1178w,
                                         images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg   589w
@@ -473,7 +457,6 @@
                         <article>
                             <div class="card-img">
                                 <img
-                                    class="hor-img"
                                     srcset="
                                         images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg 1008w,
                                         images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg   504w
