--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         placeholder="Marseille, France"
                         class="search-input"
                     />
-                    <button type="submit" class="search-btn">
+                    <button type="submit" class="search-btn" aria-label="Rechercher">
                         <span class="search-btn-text">Rechercher</span>
                         <i class="fas fa-search search-btn-icon"></i>
                     </button>
